GPC/tests/examples/fail/wrongPointers4.gpc


void wrongPointers4(bool *b) {

    bool *c = 4 - b;

}
